--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root@localhost:3306/rental"
+NEXTAUTH_SECRET="B+28s4pPukCnFBCG969XZ8uwl4lGHYZzKZRXMAmMIpY="
+NEXTAUTH_URL=http://localhost:3000
+
 
 
