--- a/package.json
+++ b/package.json
@@ -4,30 +4,43 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",  
+    "build": "prisma generate && next build",
     "start": "next start",
     "postinstall": "prisma migrate deploy",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@prisma/client": "^5.20.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@mui/styles": "^6.1.3",
+    "@mui/x-data-grid": "^7.20.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.21.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "fortawesome": "^0.0.1-security",
     "next": "14.2.7",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
-    "three": "^0.168.0"
+    "react-router-dom": "^6.27.0",
+    "three": "^0.168.0",
+    "x-data-grid": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.0",
     "tailwindcss": "^3.4.1"
   }
 }
