--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "postinstall": "prisma migrate deploy",
+    "postbuild": "prisma migrate deploy",
     "lint": "next lint"
   },
   "dependencies": {
