--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://avnadmin:AVNS_srH_ET6h_py3vDTM_d1@mysql-1933670c-eustacebgg-0009.d.aivencloud.com:23210/defaultdb?ssl-mode=REQUIRED"
+DATABASE_URL=""
 NEXTAUTH_SECRET="B+28s4pPukCnFBCG969XZ8uwl4lGHYZzKZRXMAmMIpY="
 NEXTAUTH_URL=http://localhost:3000
 
