--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "three": "^0.168.0",
